@@ -1,3 +1,8 @@
+2003-09-26  Benjamin Riefenstahl  <Benjamin.Riefenstahl@epost.de>
+
+    * macosx/tkMacOSXWm.c (TkWmStackorderToplevelWrapperMap): Add
+    GetWindowFromPort() [Bug #812415]; make function static.
+
 2003-09-25  Daniel Steffen  <das@users.sourceforge.net>
 
 	* library/demos/widget: don't create iconwindow on aqua, but add
